# mushroomproject

./: .gitignore  Dockerfile  dump.rdb  image_saver.py  ip.txt  ip.txt_back  ip.txt_coss  ip.txt_lab  myyolo_usb_camera.py  network  node.py  pub_keys.txt  redis.conf  stdout  test.py  y  y.pub
WebUI/: .firebaserc  README.md  angular.json  firebase.json  package-lock.json  package.json  proxy.config.json
WebUI/src/: styles.scss
YOLOX-main/: HitbotInterface.py  Mushroom.py  app.py  app_ipcam.py  base_camera.py  camera_ipcam.py  dump-master.rdb  ip.txt  main_onnx.py  main_opencv.py  move_publish.py  move_subcribe.py  pickup_publish.py  pubsish.py  requirements.txt  scan_subcribe.py  simple_stream.py  testonnxruntime.py  tracker.py  xyz_publish.py
YOLOX-main/assets/: app.py
YOLOX-main/templates/: index.html
YOLOX-main/tools/: demo.py  demo_ip.py  demo_realsense.py  demo_trt.py  trt.py
YOLOX-main/utils/: plots.py
abdollah/: D405Config.json  PointTransformer2.py  depth test_Depth.raw  engine.py  export.py  grbl_test.gcode  playground.ipynb  rotation_conversions.py  show.py  stream.py  test.py  utils.py
abdollah/depth_frames/: depth_20250626_120624_139962.npy  depth_20250626_120627_939848.npy  depth_20250626_120648_408808.npy  depth_20250626_120749_376066.npy  depth_20250626_120825_416311.npy  depth_20250626_121142_789971.npy  depth_20250703_114354_407721.npy  depth_20250703_114438_942099.npy  depth_20250703_114439_175536.npy  depth_20250703_114439_343601.npy  depth_20250703_114612_442247.npy  depth_20250703_114614_704915.npy  depth_20250703_114619_048406.npy
abdollah/models/: PointTransformer2.py  utils.py
abdollah/server/: app.py  camera.py  collision.py  config.json  config.py  distance_readings.txt  main.py  main2.py  view.py
api_server/: .fuse_hidden000040bf00000001  app.py  back_point_cloud2.py  run.sh
flask-video-streaming/: Robot.py  app.py  app.py_new  app_ipcam.py  camera_det_rs.py  camera_det_usb.py  camera_ipcam.py  camera_ipcam_seg.py  camera_rs.py  camera_rs.py_old  camera_rs_D405.py  camera_usb.py  camera_v4l2.py  car_dir.py  dump.rdb  img_publish.py  ip.txt  motor.py  move_publish.py  move_subcribe.py  myutils.py  publish.py  redis_cli.py  requirements-opencv.txt  requirements-pi.txt  requirements.txt  sms.py  stdout  stream.py  subcribe.py  testservokit.py  track_deepsort.py  track_deepsort_YOLOv8.py  tracker.py  trt.py  xyz_publish.py  yolov8_run.py
flask-video-streaming/rt_utils/: rt_utils.py
flask-video-streaming/templates/: index.html
flask-video-streaming/utils/: general.py
flask-video-streaming/yoloseg/: YOLOSeg.py  utils.py
flask-video-streaming/yolov8/: YOLOv8.py
flask_ros2_app/: package.xml  setup.cfg  setup.py
flask_ros2_app/flask_ros2_app/: flask_ros2_app_node.py
flask_ros_app/: package.xml  setup.py
gripper/: PCA9685.py  PCA9685.py_back  PCA9685.py_old  app.py  dump-master.rdb  ip.txt  simple-input.py  simple_stream.py  video_dir.py
gripper/templates/: index.html
harvest_ws/api_server/: app.py  app_new.py  run.sh
harvest_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
harvest_ws/log/: latest_build
harvest_ws/robot-monitoring-system/: next.config.mjs  package-lock.json
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
old/: myyolo_usb_camera.py  run.sh
pico/: main.py  robot_car.py  secrets.py  temp_server.py
robot-management/: next.config.mjs  package-lock.json  package.json
ros2_api_server/: app.py  app_test.py  point_cloud2.py  run.sh
ros2_web_server/: app.py  app_ipcam.py  camera_ipcam.py  run.sh
ros2_ws/: add_moveit_object.py  allinone.sh  back.txt  camera.sh  camera_main.py  camera_test.py  compute_ik.py  default_cam.yaml  gripper.sh  lidar_bar copy.py  lidar_bar.py  lidar_cluster.py  lidarscan.py  log.txtx  map.bt  motion_plan_demo.py  placscene.py  pymoveit2_demo.py  pymoveit2_demo2.py  redis_cli.py  run_app.sh  run_web.sh  scara_rrt_planner.py  scara_rrt_planner2.py  ttr_angle_test.py  yolox_ros.sh
ros2_ws/src/moveit2_motion_planning/: CMakeLists.txt  package.xml
ros2_ws/src/moveit2_motion_planning/src/: mushroom_planning.cpp
ros2_ws/src/scara_moveit/scara_description/: CMakeLists.txt  package.xml
ros2_ws/src/scara_moveit/scara_description/config/: joint_names_scara_description.yaml
ros2_ws/src/scara_moveit/scara_description/meshes_back/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL  link8.STL
ros2_ws/src/scara_moveit/scara_description/urdf/: mushroom_bot3_urdf.urdf  scara_description.urdf
ros2_ws/src/scara_moveit/scara_hardware/: CMakeLists.txt  package.xml  scara_hardware.xml
ros2_ws/src/scara_moveit/scara_hardware/config/: motor_config.yaml
ros2_ws/src/scara_moveit/scara_hardware/include/scara_hardware/: mj_map.hpp  motor_joint.hpp  scara_hardware.hpp
ros2_ws/src/scara_moveit/scara_hardware/src/: mj_map.cpp  motor_joint.cpp  scara_hardware.cpp  scara_hardware.cpp_back
ros2_ws/src/scara_moveit/scara_servo/: CMakeLists.txt  package.xml
ros2_ws/src/scara_moveit/scara_servo/config/: servo_config.yaml
ros2_ws/src/scara_moveit/scara_servo/launch/: joystick_demo.py  scara_servo.py
ros2_ws/src/scara_moveit/scara_servo/src/: joystick_demo.cpp  scara_servo.cpp
rpi4_server/: app.py  camera_ipcam.py  camera_rs.py  camera_usb.py  run.sh
rpi5_server/: app.py  base_camera.py  camera_usb.py  run.sh
rpi_gripper/: PCA9685.py  app.py  app_orig.app  cnc.py  config  motor.py  motor.py_new37  video_dir.py
scara_python/: 60_60_0_data.csv  HitbotInterface.py  data.csv  demo1.py  demo_scara.py  pickup.py  test.py  test_scan.py
scripts/: install_ros2.sh
usb_camera_server/: app.py  camera.txt  camera_ipcam.py  camera_usb.py  log.txt  mjpeg_server.py  run.sh  stream.py
yolov8/: HitbotInterface.py  Mushroom.py  abu_stream_frames.py  app_ipcam.py  base_camera.py  camera_ipcam.py  camera_rs.py  cocotrain.py  config  move_publish.py  myexport.py  publish.py  realsense_example.py  realsense_tensorrt.py  stdout  test.py  tracker.py  video_dir.py  xyz_publish.py
(+829 files in other folders)
