<?xml version="1.0"?>
<package format="3">
  <name>scara_description</name>
  <version>2.0.6</version>
  <description>The scara_description package</description>

  <maintainer email="yao29@illinois.edu">Yao Xinchen</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
